@@ -1,3 +1,5 @@
+- Refactor: upgraded fenixedu-academic-core dependency
+
 2.3.3 (04-04-2020)
 - Refactor: upgraded fenixedu-academic-core dependency
 
